feat: page is more pretty

--- a/styles.css
+++ b/styles.css
@@ -453,3 +453,16 @@ li .description {
 
 
 /* End of all :P*/
+
+
+.link{
+	cursor: pointer; 
+	border: 1px solid #ddd; 
+	border-radius: 4px; 
+	padding: 5px; 
+	margin-bottom: 5px;
+}
+
+.link:hover {
+	box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  }
